# mas_perception_libs

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt
.github/: CODEOWNERS
common/include/mas_perception_libs/: bounding_box_2d.h  cvmat_ndarray_converter.h
common/src/: bounding_box.cpp  bounding_box_2d.cpp  cvmat_ndarray_converter.cpp
docs/: cpp_library.md  python_package.md
models/: coco_classes.yml  ycb_classes.yml
ros/config/: PlaneFitting.cfg  plane_fitting_default_configs.yaml
ros/include/mas_perception_libs/: bounding_box_wrapper.h  image_bounding_box.h  point_cloud_utils_ros.h
ros/include/mas_perception_libs/impl/: mat_ndarray_conversion.hpp  ndarray_conversions.hpp  ros_message_serialization.hpp
ros/launch/: object_detection.launch  plane_detection.launch
ros/scripts/: cloud_processing_python_test  image_detection_test  image_recognition_client_test  image_recognition_server  object_detection_action_server  plane_detection_action_server
ros/src/: boost_python_module.cpp  bounding_box_wrapper.cpp  cloud_processing_test_node.cpp  image_bounding_box.cpp  point_cloud_utils_ros.cpp
ros/src/mas_perception_libs/: __init__.py  image_classifier.py  image_detector.py  image_recognition_service.py  object_detector.py  plane_detector.py  ros_message_serialization.py  scene_detection_action.py  utils.py  visualization.py
ros/test/: cloud_processing_tests.py  cloud_processing_tests_ros.py
